# api.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.2
 info:
   version: 1.0.0
   title: IssueTracker
-  description: "This is the Open API documentation for the REST API of our beloved application **IssueTracker** deployed at <https://issuetrackerv1.herokuapp.com/>. <br>All operations are executable. Operations that make changes to the domain require authentication. In this case, you must **Authorize** your request by providing the token value you got when you created the tweet."
+  description: "This is the Open API documentation for the REST API of our beloved application **IssueTracker** deployed at <https://issuetrackerv1.herokuapp.com/>. <br>All operations are executable. Operations that make changes to the domain require authentication. In this case, you must **Authorize** your request by providing your users API key."
 servers:
   - url: 'https://issuetrackerv1.herokuapp.com/'
   - url: 'http://52.90.205.229:8080'
@@ -414,14 +414,13 @@ paths:
                 items:
                   $ref: '#/components/schemas/Comment'
 
-  /issues/{IssueId}/comments/new:
     post:
       tags:
         - Issues -> Comments
       summary: Adds a new comment to an Issue
       operationId: create_comment
       parameters:
-      - name: IssueId
+      - name: id
         in: path
         description: ID of the Issue to add a comment to
         required: true
